Added contrast color

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
     --btn-background: 224 33% 39%;
     --btn-background-hover: 224 25% 61%;
     --foreground: 200 20% 96%;
+    --contrast: 43 72% 90%;
   }
 }
 
